<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_speed_mode"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_speed_mode" />

    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/nav_tutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_tutorial" />

    <item
        android:id="@+id/nav_mine"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_mine" />

    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_about" />

    <group android:id="@+id/group_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/nav_logout" />
    </group>

</menu>
